samples/_failures_safe/1761646239_87244e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_748419aa.c: In function ‘tokenize’:
./samples/SAFE/__tmp_748419aa.c:163:27: error: expected ‘]’ at end of input
  163 |         tokens[token_count
      |                           ^
      |                           ]
./samples/SAFE/__tmp_748419aa.c:163:9: error: expected declaration or statement at end of input
  163 |         tokens[token_count
      |         ^~~~~~
./samples/SAFE/__tmp_748419aa.c:163:9: error: expected declaration or statement at end of input
